# rapidcheck

./: meson.build
src/: meson.build
